# finflow-report

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  provider.yml
.github/workflows/: ci.yml
configs/: sample.yml
docs/: CODEX_FOR_OSS_APPLICATION.md  GROWTH_PLAN.md  PROJECT_REVIEW.md
examples/: http_api.yml
examples/data/: sample_market.json
src/finflow_report/: __init__.py  cli.py  config.py  dashboard.py  excel.py  normalize.py  pipeline.py  source.py
tests/: test_normalize.py  test_pipeline.py
