[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "finflow-report"
version = "0.1.0"
description = "Turn inconsistent financial API responses into polished Excel reports and Streamlit dashboards."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Anderson-Shin"}]
keywords = ["finance", "excel", "dashboard", "data-pipeline", "streamlit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pandas>=2.1",
  "plotly>=5.18",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "requests>=2.31",
  "streamlit>=1.31",
  "xlsxwriter>=3.1",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.4"]

[project.scripts]
finflow = "finflow_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
